; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_nasty.c_test_checkout_nasty__honors_core_protecthfs.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_nasty.c_test_checkout_nasty__honors_core_protecthfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"core.protectHFS\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_1\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c".git/foobar\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_2\00", align 1
@.str.4 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_3\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_4\00", align 1
@.str.6 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_5\00", align 1
@.str.7 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_6\00", align 1
@.str.8 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_7\00", align 1
@.str.9 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_8\00", align 1
@.str.10 = private unnamed_addr constant [34 x i8] c"refs/heads/dotgit_hfs_ignorable_9\00", align 1
@.str.11 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_10\00", align 1
@.str.12 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_11\00", align 1
@.str.13 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_12\00", align 1
@.str.14 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_13\00", align 1
@.str.15 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_14\00", align 1
@.str.16 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_15\00", align 1
@.str.17 = private unnamed_addr constant [35 x i8] c"refs/heads/dotgit_hfs_ignorable_16\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_nasty__honors_core_protecthfs() #0 {
  %1 = load i32, i32* @repo, align 4
  %2 = call i32 @cl_repo_set_bool(i32 %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 1)
  %3 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %10 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %12 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %15 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %16 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %17 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %18 = call i32 @test_checkout_fails(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_repo_set_bool(i32, i8*, i32) #1

declare dso_local i32 @test_checkout_fails(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
